added may 14 recap and author info

--- a/themes/covidcon-hugo/layouts/partials/blog-sidebar.html
+++ b/themes/covidcon-hugo/layouts/partials/blog-sidebar.html
@@ -35,12 +35,12 @@
     </div>
   </div>
 
-  <div class="widget mb-5">
+  <!-- <div class="widget mb-5">
     <h5 class="widget-title mb-4">{{ i18n "follow_us" }}</h5>
     <ul class="list-inline social-links">
       {{ range .Site.Params.social }}
       <li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
       {{ end }}
     </ul>
-  </div>
+  </div> -->
 </div>
